unpackaged/main/default/objects/Expense_Claim__c/Expense_Claim__c.object-meta.xml
<CustomObject>
    <description>Keep track of receipts from various sources

Recording Expense Claims - which may have a receipt associated with it</description>
    <label>Expense Claim</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Expense Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Claim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>