unpackaged/main/default/objects/Expense_Claim__c/fields/Costs_and_Charges__c.field-meta.xml
<CustomField>
    <fullName>Costs_and_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costs and Charges</label>
    <referenceTo>Costs_and_Charges__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>