unpackaged/main/default/objects/Expense_Claim__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer associated with receipt</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses Claim</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>