unpackaged/main/default/objects/Expense_Claim__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of the receipt</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>