unpackaged/main/default/objects/Expense_Claim__c/fields/General_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will show the corresponding GLC related to it</description>
    <label>General Ledger Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>