unpackaged/main/default/objects/Expense_Claim__c/fields/Ledger_Type__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Type__c</fullName>
    <description>This will be used as an indicator into which GLC will be populated</description>
    <label>Ledger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ledger_Type</valueSetName>
    </valueSet>
</CustomField>