unpackaged/main/default/objects/Expense_Claim__c/fields/Proof_of_Material_Claim__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Material_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proof of material claim provided</description>
    <inlineHelpText>This will be automatically updated when Submitted for Approval</inlineHelpText>
    <label>Proof of Material Claim</label>
    <type>Checkbox</type>
</CustomField>