unpackaged/main/default/objects/Expense_Claim__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <description>Type of Receipt from the Engineer</description>
    <label>Receipt Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Receipt</valueSetName>
    </valueSet>
</CustomField>