unpackaged/main/default/objects/Expense_Claim__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <description>This field will be used to determine what the receipt is in regards to.</description>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refund_Type</valueSetName>
    </valueSet>
</CustomField>