unpackaged/main/default/objects/Expense_Claim__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be use to show which engineer the receipt in question relates to</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>