unpackaged/main/default/objects/Expense_Claim__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Expenses Claim</relationshipLabel>
    <relationshipName>Expenses_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>