unpackaged/main/default/objects/Expense_Claim__c/recordTypes/Invoice.recordType-meta.xml
<RecordType>
    <fullName>Invoice</fullName>
    <active>true</active>
    <description>Invoice receipt</description>
    <label>Invoice</label>
</RecordType>