unpackaged/main/default/objects/Expense_Claim__c/recordTypes/Material.recordType-meta.xml
<RecordType>
    <fullName>Material</fullName>
    <active>true</active>
    <description>Engineer materials</description>
    <label>Material</label>
</RecordType>